testsuite/tests/properties/invalid_domain/with_int/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    fun get_var(): LogicVar = raise[LogicVar] PropertyError()
    fun get_eq(): Equation = %domain(self.get_var(), 1)
}
